last sections added

--- a/index.html
+++ b/index.html
@@ -150,5 +150,103 @@
     </div>
     <a href="#">Ver todos os artistas <img src="./assets/arrow-orange.svg" alt=""></a>
   </section>
+
+  <footer>
+    <div class="footer-header">
+      <img class="footer-img-logo" src="./assets/logo.svg" alt="Rocket NFTs Logo">
+      <div class="footer-arrow">
+        <img src="./assets/arrow-black.svg" alt="Arrow black in a red background">
+      </div>
+    </div>
+
+    <div class="links">
+      <form>
+        <h1>Fique por dentro de <span>todas as novidades</span></h1>
+        <div>
+          <input type="email" placeholder="nft@rocketseat.com.br">
+          <button>Enviar</button>
+        </div>
+      </form>
+
+      <div class="line"></div>
+
+      <div class="otherlinks">
+        <ul>
+          <li id="label-links">Empresa</li>
+          <li>
+            <a href="#">Sobre</a>
+          </li>
+          <li>
+            <a href="#">Serviços</a>
+          </li>
+          <li>
+            <a href="#">Time</a>
+          </li>
+          <li>
+            <a href="#">Carreira</a>
+          </li>
+        </ul>
+
+        <ul>
+          <li id="label-links">Mapa</li>
+          <li>
+            <a href="#">Galeria</a>
+          </li>
+          <li>
+            <a href="#">Populares</a>
+          </li>
+          <li>
+            <a href="#">Vendas</a>
+          </li>
+          <li>
+            <a href="#">Contato</a>
+          </li>
+        </ul>
+
+        <ul>
+          <li id="label-links">Links</li>
+          <li>
+            <a href="#">FAQs</a>
+          </li>
+          <li>
+            <a href="#">Termos</a>
+          </li>
+          <li>
+            <a href="#">Política</a>
+          </li>
+          <li>
+            <a href="#">Ajuda</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  
+    <div class="social-links">
+      <a href="www.rocketseat.com.br">www.rocketseat.com.br</a>
+
+      <ul>
+        <li> 
+          <a href="#">
+            <img src="./assets/instagram.svg" alt="Instagram icon">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./assets/youtube.svg" alt="Youtube icon">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./assets/twitter.svg" alt="Twitter icon">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./assets/email.svg" alt="Email icon">
+          </a>
+        </li>
+      </ul>
+    </div>
+  </footer>
 </body>
 </html>
